# pathvector

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DAEMON.md  DECISIONS.md  INTEGRATION_TESTING.md  Justfile  LOCAL_INTEROP.md  PERFORMANCE.md  README.md  RELEASING.md  RFC_AUDIT.md  RFC_REQUIREMENTS.md  TESTING.md  TODO.md  book.toml  config.toml  gobgp.toml
.config/: nextest.toml
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml  rust.yml
.zed/: settings.json
docs/src/: SUMMARY.md  cli.md  getting-started.md  introduction.md  local-interop.md  management-api.md  rfc-compliance.md  roadmap.md  testing.md
docs/src/architecture/: crates.md  data-flow.md  safety.md
docs/src/configuration/: README.md  policy.md  toml-reference.md
e2e/: Cargo.toml  Dockerfile.frr  Dockerfile.pathvectord  docker-compose.yml
e2e/fixtures/: gobgp.toml  mrt-pathvectord.toml  pathvectord.toml
e2e/src/: lib.rs
e2e/tests/: auth.rs  bird_routes.rs  bird_session.rs  frr_routes.rs  origination.rs  outbound.rs  policy.rs  routes.rs  session.rs
fuzz/corpus/session_framing/: open_with_4byte_cap
fuzz/corpus/session_message/: notification_cease  route_refresh_ipv6
fuzz/fuzz_targets/: session_framing.rs  session_message.rs
pathvector/: Cargo.toml  README.md
pathvector-bmp/: Cargo.toml  README.md  RFC.md
pathvector-client/: Cargo.toml  README.md  build.rs
pathvector-client/proto/pathvector/v1/: management.proto
pathvector-client/src/: client_trait.rs  convert.rs  error.rs  lib.rs  proto.rs  types.rs
pathvector-client/tests/: integration.rs
pathvector-e2e/: Cargo.toml  Dockerfile  Dockerfile.bird  Dockerfile.mock-bgp-dialer  Dockerfile.mock-bgp-peer  Dockerfile.mock-rtr  Dockerfile.pathvectord  docker-compose.yml
pathvector-e2e/fixtures/: mrt-pathvectord.toml
pathvector-e2e/src/: lib.rs
pathvector-e2e/tests/: bird_session.rs  collision_resolution.rs  dynamic_peers.rs  fault_injection.rs  fib.rs  frr_session.rs  graceful_restart_ipv6.rs  graceful_restart_phase2.rs  ipv6_accept.rs  ipv6_transport.rs  metrics.rs  policy.rs  role.rs  route_reflector.rs  routes.rs  rpki.rs  session.rs
pathvector-fuzz/: Cargo.toml
pathvector-fuzz/corpus/session_framing/: open_minimal
pathvector-fuzz/fuzz_targets/: rtr_pdu.rs  session_framing.rs
pathvector-mrt/: Cargo.toml  README.md
pathvector-mrt/src/: main.rs  mrt.rs  speaker.rs
pathvector-policy/: Cargo.toml  README.md  RFC.md
pathvector-policy/src/: action.rs  condition.rs  lib.rs  otc.rs  outcome.rs  prop_tests.rs  route.rs  rpki.rs  term.rs  testutil.rs
pathvector-rib/: Cargo.toml  README.md  RFC.md
pathvector-rib/benches/: loc_rib_insert.rs  outbound_pipeline.rs  select_best.rs
pathvector-rib/proptest-regressions/: best_path.txt  prop_tests.txt
pathvector-rib/src/: adj_rib_in.rs  adj_rib_out.rs  best_path.rs  lib.rs  loc_rib.rs  oracle.rs  outbound.rs  peer.rs  prop_tests.rs  route.rs
pathvector-rpki/: Cargo.toml  README.md  RFC.md
pathvector-rpki/examples/: validate_prefix.rs
pathvector-rpki/proptest-regressions/: table.txt
pathvector-rpki/src/: client.rs  error.rs  lib.rs  pdu.rs  table.rs
pathvector-session/: Cargo.toml  README.md  RFC.md  TESTING.md
pathvector-session/benches/: codec.rs
pathvector-session/proptest-regressions/framing/: prop_tests.txt
pathvector-session/proptest-regressions/fsm/: prop_tests.txt
pathvector-session/proptest-regressions/message/: prop_tests.txt  update.txt
pathvector-session/src/: framing.rs  lib.rs  transport.rs
pathvector-session/src/framing/: mod.rs  prop_tests.rs
pathvector-session/src/fsm/: mod.rs  prop_tests.rs
pathvector-session/src/message/: error.rs  header.rs  mod.rs  notification.rs  open.rs  prop_tests.rs  route_refresh.rs  update.rs
pathvector-session/src/transport/: mod.rs  prop_tests.rs
pathvector-session/tests/: transport.rs
pathvector-stress/: Cargo.toml  README.md  build.rs
pathvector-stress/src/: gobgp_bench.rs  main.rs
pathvector-sys/: Cargo.toml  README.md  RFC.md
pathvector-sys/proptest-regressions/: tcp.txt
pathvector-sys/src/: fib.rs  lib.rs  tcp.rs
pathvector-sys/src/fib/: linux.rs  mod.rs  stub.rs
pathvector-types/: Cargo.toml  README.md  RFC.md
pathvector-types/src/: afi.rs  asn.rs  aspath.rs  attr.rs  community.rs  lib.rs  nlri.rs  peer_type.rs  prop_tests.rs  role.rs
pathvector/src/: cli.rs  client_trait.rs  dashboard.rs  error.rs  main.rs  output.rs
pathvector/src/snapshots/: pathvector__dashboard__tests__snapshot_render_full_empty.snap  pathvector__dashboard__tests__snapshot_render_full_populated.snap  pathvector__dashboard__tests__snapshot_render_peers_empty.snap  pathvector__dashboard__tests__snapshot_render_peers_established.snap  pathvector__dashboard__tests__snapshot_render_peers_idle.snap  pathvector__dashboard__tests__snapshot_render_routes_empty.snap  pathvector__dashboard__tests__snapshot_render_routes_with_route.snap  pathvector__dashboard__tests__snapshot_render_status_bar_error.snap  pathvector__dashboard__tests__snapshot_render_status_bar_live.snap  pathvector__dashboard__tests__snapshot_render_status_bar_ok.snap
pathvectord/: Cargo.toml  README.md  RFC.md  build.rs
pathvectord/src/: config.rs  daemon.rs  fib.rs  grpc.rs  main.rs  metrics.rs  outbound.rs  proto.rs
pathvectord/src/daemon/: capabilities.rs  fib.rs  gr.rs  mod.rs  origination.rs  peer.rs  policy.rs  route.rs
plans/: README.md  criterion-benchmarks.md  dynamic-peer-config.md  ipv6-interop.md  performance-history.md  route-reflector.md  stale-route-cleanup.md  stress-test-full-table.md
proto/pathvector/v1/: management.proto
scripts/: check-test-bins.sh  exchange.sh
