[workspace]
members = [
    "pathvector-types",
    "pathvector-policy",
    "pathvector-rib",
    "pathvector-session",
    "pathvector-bmp",
    "pathvector-client",
    "pathvectord",
    "e2e",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Derek Bruckner <dbrucknr@umich.edu>"]
repository = "https://github.com/dbrucknr/pathvector"
categories = ["network-programming"]
keywords = ["bgp", "routing", "networking"]

[workspace.dependencies]
# Internal crates
pathvector-types   = { path = "pathvector-types",   version = "0.1.0" }
pathvector-policy  = { path = "pathvector-policy",  version = "0.1.0" }
pathvector-rib     = { path = "pathvector-rib",     version = "0.1.0" }
pathvector-session = { path = "pathvector-session", version = "0.1.0" }
pathvector-bmp     = { path = "pathvector-bmp",     version = "0.1.0" }
pathvector-client  = { path = "pathvector-client",  version = "0.1.0" }

# External dependencies
bytes      = "1"
futures    = "0.3"
ipnetx     = "0.2.2"
routemap   = "0.1.2"
tokio      = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
proptest   = "1"
tonic            = { version = "0.14", features = ["transport"] }
tonic-prost      = "0.14"
tonic-reflection = "0.14"
prost            = "0.14"
prost-types      = "0.14"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
