[workspace]
members = [
    "pathvector-types",
    "pathvector-policy",
    "pathvector-rib",
    "pathvector-session",
    "pathvector-bmp",
    "pathvector-rpki",
    "pathvector-client",
    "pathvectord",
    "pathvector",
    "pathvector-e2e",
    "pathvector-sys",
    "pathvector-stress",
    "pathvector-mrt",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Derek Bruckner <dbrucknr@umich.edu>"]
repository = "https://github.com/dbrucknr/pathvector"
categories = ["network-programming"]
keywords = ["bgp", "routing", "networking"]

[workspace.dependencies]
# Internal crates
pathvector-sys     = { path = "pathvector-sys",     version = "0.1.0" }
pathvector-types   = { path = "pathvector-types",   version = "0.1.0" }
pathvector-policy  = { path = "pathvector-policy",  version = "0.1.0" }
pathvector-rib     = { path = "pathvector-rib",     version = "0.1.0" }
pathvector-session = { path = "pathvector-session", version = "0.1.0" }
pathvector-bmp     = { path = "pathvector-bmp",     version = "0.1.0" }
pathvector-rpki    = { path = "pathvector-rpki",    version = "0.1.0" }
pathvector-client  = { path = "pathvector-client",  version = "0.1.0" }

# External dependencies
clap       = { version = "4", features = ["derive", "env"] }
bytes      = "1"
async-stream = "0.3"
futures      = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
ipnetx     = "0.3.0"
routemap   = "0.1.4"
tokio      = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
socket2    = "0.6"
proptest   = "1"
criterion  = { version = "0.8.2", features = ["html_reports"] }
ahash      = "0.8"
smallvec   = { version = "1", features = ["union"] }
libc       = "0.2"
tikv-jemallocator = "0.7"
tonic            = { version = "0.14", features = ["transport"] }
tonic-prost      = "0.14"
tonic-reflection = "0.14"
prost            = "0.14"
prost-types      = "0.14"
metrics                     = "0.24"
metrics-exporter-prometheus = "0.16"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
