[package]
name = "pathvector-client"
version = "0.1.0"
description = "gRPC client library for the pathvector BGP daemon management API"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bytes       = { workspace = true }
prost       = { workspace = true }
prost-types = { workspace = true }
tonic       = { workspace = true }
tonic-prost = { workspace = true }
tokio       = { workspace = true }
serde       = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
proptest     = { workspace = true }
tokio-stream = "0.1"

[features]
serde = ["dep:serde"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all          = { level = "warn", priority = -1 }
pedantic     = { level = "warn", priority = -1 }
# Suppress lints that fire in prost/tonic generated code included via OUT_DIR.
# clippy uses physical file spans so crate-level allow is the only reliable fix.
doc_markdown               = "allow"
trivially_copy_pass_by_ref = "allow"
default_trait_access       = "allow"
too_many_lines             = "allow"
