[package]
name = "pathvector-client"
version = "0.1.0"
description = "gRPC client library for the pathvector BGP daemon management API"
readme = "README.md"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Derek Bruckner <dbrucknr@umich.edu>"]
repository = "https://github.com/dbrucknr/pathvector"
categories = ["network-programming"]
keywords = ["bgp", "routing", "networking", "grpc"]
include = [
    "src/**/*",
    "proto/**/*",
    "tests/**/*",
    "build.rs",
    "README.md",
    "LICENSE",
]

[dependencies]
bytes        = "1"
futures      = "0.3"
prost        = "0.14"
prost-types  = "0.14"
tonic        = { version = "0.14", features = ["transport"] }
tonic-prost  = "0.14"
tokio        = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde        = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
proptest = "1"

[features]
serde = ["dep:serde"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all          = { level = "warn", priority = -1 }
pedantic     = { level = "warn", priority = -1 }
# Suppress lints that fire in prost/tonic generated code included via OUT_DIR.
# clippy uses physical file spans so crate-level allow is the only reliable fix.
doc_markdown               = "allow"
trivially_copy_pass_by_ref = "allow"
default_trait_access       = "allow"
too_many_lines             = "allow"
