[package]
name        = "pathvector-mrt"
version     = "0.1.0"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[[bin]]
name = "pathvector-mrt"
path = "src/main.rs"

[dependencies]
pathvector-session = { workspace = true }
pathvector-client  = { workspace = true }
pathvector-types   = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
clap         = { workspace = true }
flate2       = "1"

[lints]
workspace = true
