[package]
name = "pathvector-session"
version = "0.1.0"
description = "BGP session management: FSM, TCP transport, and message codec (OPEN/UPDATE/KEEPALIVE/NOTIFICATION)"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
pathvector-types = { workspace = true }

[lints]
workspace = true
