[package]
name = "pathvector-session"
version = "0.1.0"
description = "BGP session management: FSM, TCP transport, and message codec (OPEN/UPDATE/KEEPALIVE/NOTIFICATION)"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bytes            = { workspace = true }
futures          = { workspace = true }
pathvector-types = { workspace = true }
tokio            = { workspace = true }
tokio-util       = { workspace = true }
tracing          = "0.1"

[dev-dependencies]
proptest = { workspace = true }
tokio    = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "macros", "test-util"] }

[lints]
workspace = true
