[package]
name         = "pathvector-stress"
version      = "0.1.0"
edition.workspace   = true
rust-version.workspace = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true
publish = false

[[bin]]
name = "stress"
path = "src/main.rs"

[dependencies]
pathvector-client = { workspace = true }
tokio = { workspace = true, features = ["process"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
