[package]
name         = "pathvector-stress"
version      = "0.1.0"
edition.workspace   = true
rust-version.workspace = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true
publish = false

[[bin]]
name = "stress"
path = "src/main.rs"
# Not a test harness: `main` unconditionally spawns a real pathvectord child
# and runs a full stress workload regardless of argv. Without `test = false`,
# `cargo test`/`cargo nextest run` invoke this binary with `--list --format
# terse` during discovery, and since it ignores that arg entirely, it just
# runs the whole stress test instead of listing (zero) tests — hanging the
# workspace-wide test run indefinitely.
test = false

[dependencies]
pathvector-client = { workspace = true }
tokio        = { workspace = true, features = ["process"] }
tokio-stream = "0.1"
tonic        = { workspace = true }
tonic-prost  = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
