[package]
name = "pathvector-sys"
version = "0.1.0"
description = "Safe wrappers over OS-level socket APIs used by pathvector (TCP_MD5SIG, etc.)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
libc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

# This crate's sole purpose is to encapsulate unsafe OS-level syscalls and
# expose a safe public API. It deliberately does NOT inherit the workspace
# `unsafe_code = "forbid"` lint — that rule applies to all other pathvector
# crates, which call this crate's safe functions without writing any unsafe
# themselves.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
