[package]
name = "pathvector-types"
version = "0.1.0"
description = "Core BGP types: AS numbers, AS paths, communities, NLRI, and route attributes"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true
