[package]
name         = "pathvector"
description  = "CLI management tool for the pathvector BGP daemon"
version      = "0.1.0"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
categories   = { workspace = true }
keywords     = { workspace = true }

[[bin]]
name = "pathvector"
path = "src/main.rs"

[dependencies]
pathvector-client = { workspace = true }
clap              = { workspace = true }
ratatui           = "0.29"
crossterm         = "0.28"
tokio             = { workspace = true }
tonic             = { workspace = true }

[lints]
workspace = true
