[package]
name = "pathvectord"
version = "0.1.0"
description = "BGP daemon: TOML config, CLI, logging, and management API"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
pathvector-policy  = { workspace = true }
pathvector-rib     = { workspace = true }
pathvector-session = { workspace = true }
pathvector-types   = { workspace = true }
tokio              = { workspace = true }
tonic              = { workspace = true }
tonic-prost        = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
serde              = { version = "1", features = ["derive"] }
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
