[package]
name = "pathvectord"
version = "0.1.0"
description = "BGP daemon: TOML config, CLI, logging, and management API"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
pathvector-policy  = { workspace = true }
pathvector-rib     = { workspace = true }
pathvector-rpki    = { workspace = true }
pathvector-session = { workspace = true }
pathvector-sys     = { workspace = true }
pathvector-types   = { workspace = true }
tokio              = { workspace = true }
tonic              = { workspace = true }
tonic-prost        = { workspace = true }
tonic-reflection   = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
async-stream       = { workspace = true }
futures            = { workspace = true }
serde              = { version = "1", features = ["derive"] }
tokio-stream       = { workspace = true }
toml               = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tikv-jemallocator  = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
proptest          = { workspace = true }
pathvector-client = { workspace = true }
tempfile          = "3"
tokio             = { workspace = true, features = ["test-util"] }
metrics-util      = "0.19"

# pathvectord generates code via tonic_prost_build.  The generated file
# triggers four pedantic lints (doc_markdown, trivially_copy_pass_by_ref,
# default_trait_access, too_many_lines) that we cannot suppress with an
# `#[allow]` because clippy attributes the spans to the OUT_DIR file, not to
# the `mod proto` declaration.  We therefore define the lint table directly
# instead of inheriting `workspace = true`, allowing us to carve out these
# four exceptions while keeping everything else identical to the workspace set.
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all          = { level = "warn", priority = -1 }
pedantic     = { level = "warn", priority = -1 }
# Suppress lints that fire in prost/tonic generated code included via OUT_DIR.
# clippy uses physical file spans so crate-level allow is the only reliable fix.
doc_markdown               = "allow"
trivially_copy_pass_by_ref = "allow"
default_trait_access       = "allow"
too_many_lines             = "allow"
